// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> inject <Text> properties 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> renders 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {currency} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  Eur 6.995,12
</Text>
`;

exports[`<Price> when {fixed} (0) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995
</Text>
`;

exports[`<Price> when {fixed} (4) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995,1235
</Text>
`;

exports[`<Price> when {locale} (es-ES) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {operator} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  +6.995,12
</Text>
`;

exports[`<Price> when {style} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {
        "color": "#10c0bc",
        "fontSize": 20,
        "fontWeight": "700",
      },
    ]
  }
>
  6.995,12
</Text>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  $6.995,12
</Text>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995,12€
</Text>
`;

exports[`<Price> when {value} 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
>
  6.995,12
</Text>
`;
